# tools_interface

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: a_list_building_tool.rs  completer.rs  duplicity.rs  error.rs  fancy_title.rs  grep.rs  lib.rs  list_building.rs  missing_topics.rs  page_list.rs  pagepile.rs  pageviews.rs  persondata_template.rs  persondata_vorlage.rs  petscan.rs  quarry.rs  quickstatements.rs  search.rs  site.rs  sparql_rc.rs  tool.rs  tools_interface.rs  wiki_nearby.rs  xtools_pages.rs
test_data/: pagelist1.json  pagelist2.json  sparql_rc.json
