[package]
name = "tools_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json","blocking"] }
csv = "^1.3"
mediawiki = "^0.2"
serde_json = "^1"
serde = "^1"
tokio = { version = "^1", features = ["full", "rt-multi-thread"], optional=true }

[features]
blocking = []
tokio = ["dep:tokio"]
all = ["blocking"]
default = ["blocking","tokio"]

[dev-dependencies]
wiremock = "0.6"
http = "1"
