[package]
name = "tools_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
csv = "^1.3"
futures = "0.3"
lazy_static = "^1"
mediawiki = "^0.2"
regex = "^1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "^1"
serde = "^1"
tokio = { version = "^1", features = [
  "full",
  "rt-multi-thread",
], optional = true }

[features]
blocking = []
tokio = ["dep:tokio"]
all = ["blocking"]
default = ["blocking", "tokio"]

[dev-dependencies]
wiremock = "0.6"
http = "1"
