[package]
name = "tools_interface"
version = "0.1.6"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2021"
description = "Abstractions of serveral Wikipedia/Wikimedia/Wikidata-related tools"
readme = "README.md"
repository = "https://github.com/magnusmanske/tools_interface/"
license = "MIT OR Apache-2.0"
keywords = ["API", "wikimedia", "wikipedia", "wikidata"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
async-trait = "^0.1"
chrono = "^0.4"
clap = { version = "^4", features = ["derive"] }
csv = "^1.3"
futures = "0.3"
lazy_static = "^1"
mediawiki = "^0.2"
regex = "^1"
reqwest = { version = "^0.12", features = ["json", "blocking"] }
serde_json = "^1"
serde = "^1"
tokio = { version = "^1", features = [
  "full",
  "rt-multi-thread",
], optional = true }

[features]
blocking = []
tokio = ["dep:tokio"]
all = ["blocking"]
default = ["blocking", "tokio"]

[dev-dependencies]
wiremock = "0.6"
http = "1"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "s"   # Optimize for size, but leave loop vectorization.
lto = true
codegen-units = 1
panic = "abort"
